@startuml
hide circle
skinparam classAttributeIconSize 0

skinparam linetype ortho

class APIGateway {
}

class TableTypeController {
    - _tableTypeRepositories: ITableTypeRepositories
    + DeleteTableType(Guid id): Task<IActionResult> 
}

interface ITableTypeRepositories<<interface>> {
    + DeleteTableType(Guid id): Task<IActionResult> 
   }

class TableTypeRepositories {
    - _tableTypeDao: TableTypeDAO
    + DeleteTableType(Guid id): Task<IActionResult> 
}

class TableTypeDAO {
    - _client.From<Table> : ISupabaseTable<Table>
    - _client.From<TableType> : ISupabaseTable<TableType>
    + DeleteTableType(Guid id): Task<IActionResult>
    + GetTableTypeById(Guid id): Task<GetTableTypeResponseDTO> 
}
class TableType {
    + Id: Guid
    + Name: string
    + Description: string

    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}
class Table {
    + Id: Guid
    + TableNumber: string
    + Capacity: int
    + Status: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + ShopId: Guid
    + TypeId: Guid
}

APIGateway -- TableTypeController
TableTypeController -- ITableTypeRepositories
ITableTypeRepositories <|-- TableTypeRepositories
TableTypeRepositories "1"--"1..*" TableTypeDAO

TableTypeDAO "1"--"0..*" TableType
TableTypeDAO "1"--"0..*" Table
@enduml
